Bug 1341411 - Support circular module dependencies through export* per ES2017. r=jonco

--HG--
extra : rebase_source : c7e1bf6780d2311c0302fe0b505886a35bb9ef86