js/src/jit-test/modules/export-star-circular-2.js
@@ -1,0 +1,3 @@
+export {y as x} from "export-star-circular-1.js";
+
+export var y = "pass";
