js/src/jit-test/tests/modules/export-star-cannot-rescue-missing-export.js
@@ -1,0 +1,4 @@
+// |jit-test| module; error:SyntaxError
+
+export { a } from "empty.js";
+export* from "module1.js";
